--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/page.css' %}">
 </head>
+
 <body>
-    <h1>HOLAAAAAAAAAAAAAAAAA</h1>
+    <div class="base">
+
+        <div>
+            <h1>HOLAAAA</h1>
+        </div>
+    
+        <div>
+
+        </div>
+    
+        <div>
+
+        </div>
+
+    </div> 
 </body>
+
 </html>
