--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -9,21 +9,37 @@
 </head>
 
 <body>
-    <div class="base">
 
-        <div>
-            <h1>HOLAAAA</h1>
+    <header>
+        <div class="cabecera">
+            <div class="c1">
+                <H1>Hola</H1>
+            </div>
+            <div class="c2">
+                <h1>TEXT</h1>
+            </div>
+            <div class="c3">
+                <H1>SAMPLE TEXT</H1>
+            </div>
         </div>
-    
-        <div>
+    </header>
 
+    <main>
+        <div class="formulario">
+            <h1>Consultar producto</h1>
+            <div class="campo">
+                <h3>Código de producto:</h3>
+                <input type="text" id="nombre" name="nombre">
+            </div>
+            <button>Ingresar</button>
         </div>
-    
-        <div>
+    </main>
 
+    <footer>
+        <div class="pie">
+            <H1>BOTTOM TEXT</H1>
         </div>
-
-    </div> 
+    </footer>
 </body>
 
 </html>
