--- a/main/static/css/page.css
+++ b/main/static/css/page.css
@@ -1,5 +1,61 @@
-.base {
+html, body {
     height: 100%;
-    width: 100%;
-    background-color: aqua;
+    display: flex;
+    flex-direction: column;
+}
+
+header {
+    background-color: rgb(238, 238, 238);
+    padding: 20px;
+}
+
+main {
+    overflow-y: auto;
+    padding: 20px;
+    flex-grow: 1;
+    justify-content: center;
+    display: flex;
+}
+
+footer {
+    background-color: rgb(238, 238, 238);
+    padding: 20px;
+    height: 20%;
+}
+
+.cabecera {
+    display: flex;
+}
+
+.c1 {
+    width: 10%;
+    text-align: center;
+    border: 2px solid;
+}
+
+.c2 {
+    width: 30%;
+    text-align: center;
+    border: 2px solid;
+}
+
+.c3 {
+    width: 60%;
+    text-align: center;
+    border: 2px solid;
+}
+
+.formulario {
+    text-align: center;
+    width: 40%;
+    height: 50%;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+}
+
+.campo {
+    display: flex;
+    justify-content: center;
+}
+
+.pie {
 }
