--- a/main/templates/pages/catalogo.html
+++ b/main/templates/pages/catalogo.html
@@ -3,27 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>Catalogo</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/page.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 </head>
-
 <body>
-
-    <header>
-        <div class="cabecera">
-            <div class="c1">
-                <H1>Hola</H1>
-            </div>
-            <div class="c2">
-                <h1>TEXT</h1>
-            </div>
-            <div class="c3">
-                <H1>SAMPLE TEXT</H1>
-            </div>
-        </div>
-    </header>
-
+    
     <main>
         <div class="formulario">
             <h1>Consultar producto</h1>
@@ -49,11 +35,6 @@
 
     </main>
 
-    <footer>
-        <div class="pie">
-            <H1>BOTTOM TEXT</H1>
-        </div>
-    </footer>
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 </body>
-
 </html>
