--- a/main/templates/base/header.html
+++ b/main/templates/base/header.html
@@ -4,7 +4,7 @@
 
   <div class="container-fluid">
 
-    <a class="navbar-brand" href="#"><img src="" alt="Logo"></a>
+    <a class="navbar-brand" href="{% url 'index' %}"><img src="" alt="Logo"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,12 +13,12 @@
 
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <button class="btn btn-outline-success" type="submit">Buscar</button>
       </form>
 
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Inicio</a>
         </li>
 
         <li class="nav-item">
@@ -30,24 +30,45 @@
             Categoria
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li>
+              <a class="dropdown-item" href="{% url 'herramientas' %}">Herramientas</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="{% url 'muebles' %}">Muebles</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="{% url 'seguridad' %}">Seguridad</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="{% url 'proteccion' %}">Proteccion</a>
+            </li>
           </ul>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link active " href="#">Contacto</a>
+          <a class="nav-link active " href="">Contacto</a>
         </li>
 
       </ul>
 
     </div>
 
-    <div class="column-gap-3">
-      <button>Iniciar Sesión</button>
-      <button>Registrarse</button>
+    <div class="justify-content-center d-flex gap-3">
+      <a href="{% url 'carrito' %}">
+        <button class="btn btn-outline-dark" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
+        aria-controls="offcanvasScrolling" type="button">
+            <i class="bi bi-cart"></i>
+        </button>
+      </a>
+      
+      <div class="column-gap-1 d-flex">
+        <a href="{% url 'login' %}" class="d-flex">
+          <button>Iniciar Sesión</button>
+        </a>
+        <a href="" class="d-flex">
+          <button class="">Registrarse</button>
+        </a>
+      </div>
     </div>
 
 
