--- a/main/templates/pages/producto_edit.html
+++ b/main/templates/pages/producto_edit.html
@@ -33,7 +33,7 @@
                                     </option>
                                 {% endfor %}
                             </select>
-                            <label for="genero">Genero</label>
+                            <label for="categoria">Categoria</label>
                         </div>
 
                         <div class="form-floating mb-3 w-50 mx-auto">
@@ -43,6 +43,10 @@
                         <div class="form-floating mb-3 w-25 mx-auto">
                             <input type="number" class="form-control" id="valor" name="valor">
                             <label for="valor" class="form-label">Valor</label>
+                        </div>
+                        <div class="form-floating mb-3 w-25 mx-auto">
+                            <input type="number" class="form-control" id="stock" name="stock">
+                            <label for="stock" class="form-label">Stock</label>
                         </div>
 
                         <div>
