--- a/main/static/css/page.css
+++ b/main/static/css/page.css
@@ -7,6 +7,8 @@ html, body {
 section {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
     padding: 20px 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,6 +21,7 @@ main {
     flex-grow: 1;
     justify-content: center;
     flex-direction: column;
+    background-color: rgb(31, 31, 31);
 }
 
 footer {
