--- a/main/templates/pages/index.html
+++ b/main/templates/pages/index.html
@@ -7,6 +7,7 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/page.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -15,12 +16,12 @@
 
     <main>
         <!-- ESTE ES EL CARRUSEL -->
-        <section>
+        <section class="border border-warning-subtle text-bg-dark p-3">
             {% include 'base/carrousel.html' %}
         </section>
         <!-- SECCION DE CATEGORIAS DESTACADAS -->
-        <section>
-            <h2>Destacados</h2>
+        <section class="border border-warning-subtle text-bg-dark p-3">
+            <h2 style="">Destacados</h2>
             <div class="container text-center">
                 <div class="row gap-3 justify-content-center">
 
@@ -70,25 +71,161 @@
                 </div>
             </div>
         </section>
-        <!-- Productos 1 -->
-        <section>
-            
+        <!-- Productos Herramientas -->
+        <section class="border border-warning-subtle text-bg-dark p-3">
+            <h2>Herramientas</h2>
+            <div class="container-fluid row gap-5 justify-content-center">
+                <div class="col-10 col-md-6 col-lg-2">
+                    <div class="card" style="width: auto;">
+                        <img src="{% static 'images/Productos/Herr_1.jpg' %}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-10 col-md-6 col-lg-2">
+                    <div class="card" style="width: auto;">
+                        <img src="{% static 'images/Productos/Herr_2.jpg' %}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-10 col-md-6 col-lg-2">
+                    <div class="card" style="width: auto;">
+                        <img src="{% static 'images/Productos/Herr_3.jpg' %}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-10 col-md-6 col-lg-2">
+                    <div class="card" style="width: auto;">
+                        <img src="{% static 'images/Productos/Herr_4.jpg' %}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
-        <!-- Productos 2-->
-        <section>
-        
+        <!-- Productos Muebles-->
+        <section class="border border-warning-subtle text-bg-dark p-3">
+            <h2>Muebles</h2>
+            <div class="container-fluid row gap-5 justify-content-center">
+                <div class="col-10 col-md-6 col-lg-2">
+                    <div class="card" style="width: auto;">
+                        <img src="{% static 'images/Productos/Mueb_1.jpg' %}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-10 col-md-6 col-lg-2">
+                    <div class="card" style="width: auto;">
+                        <img src="{% static 'images/Productos/Mueb_2.jpg' %}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-10 col-md-6 col-lg-2">
+                    <div class="card" style="width: auto;">
+                        <img src="{% static 'images/Productos/Mueb_3.jpg' %}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-10 col-md-6 col-lg-2">
+                    <div class="card" style="width: auto;">
+                        <img src="{% static 'images/Productos/Mueb_4.jpg' %}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
-        <!-- Productos 3-->
-        <section>
-
+        <!-- Productos Seguridad-->
+        <section class="border border-warning-subtle text-bg-dark p-3">
+            <h2>Seguridad</h2>
+            <div class="container-fluid row gap-5 justify-content-center">
+                <div class="col-10 col-md-6 col-lg-2">
+                    <div class="card" style="width: auto;">
+                        <img src="{% static 'images/Productos/Seg_1.jpg' %}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-10 col-md-6 col-lg-2">
+                    <div class="card" style="width: auto;">
+                        <img src="{% static 'images/Productos/Seg_2.jpg' %}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-10 col-md-6 col-lg-2">
+                    <div class="card" style="width: auto;">
+                        <img src="{% static 'images/Productos/Seg_3.jpg' %}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-10 col-md-6 col-lg-2">
+                    <div class="card" style="width: auto;">
+                        <img src="{% static 'images/Productos/Seg_4.jpg' %}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
-        <!-- Productos 4-->
-        <section>
-
+        <!-- Productos Proteccion-->
+        <section class="border border-warning-subtle text-bg-dark p-3">
+            <h2>Proteccion</h2>
+            <div class="container-fluid row gap-5 justify-content-center">
+                <div class="col-10 col-md-6 col-lg-2">
+                    <div class="card" style="width: auto;">
+                        <img src="{% static 'images/Productos/Proct_1.jpg' %}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-10 col-md-6 col-lg-2">
+                    <div class="card" style="width: auto;">
+                        <img src="{% static 'images/Productos/Proct_2.jpg' %}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-10 col-md-6 col-lg-2">
+                    <div class="card" style="width: auto;">
+                        <img src="{% static 'images/Productos/Proct_3.jpg' %}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-10 col-md-6 col-lg-2">
+                    <div class="card" style="width: auto;">
+                        <img src="{% static 'images/Productos/Proct_4.jpg' %}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
+        {% include 'base/footer.html' %}
     </main>
     
-    {% include 'base/footer.html' %}
 
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 </body>
