--- a/main/templates/pages/inventario.html
+++ b/main/templates/pages/inventario.html
@@ -34,7 +34,7 @@
                                 <td>{{tmp.nom_producto}}</td>
                                 <td>{{tmp.categoria}}</td>
                                 <td>{{tmp.marca}}</td>
-                                <td>{{tmp.valor}}</td>
+                                <td>$ {{tmp.valor}}</td>
                                 <td>{{tmp.stock}}</td>
                                 <td><a href="{% url 'prod_findEdit' pk=tmp.id_producto %}"><button class="btn btn-warning">Modificar</button></a></td>
                                 <td><a href="{% url 'prod_del' pk=tmp.id_producto %}"><button class="btn btn-class danger bg-light">Eliminar</button></a></td>
