--- a/main/templates/pages/carrito.html
+++ b/main/templates/pages/carrito.html
@@ -16,24 +16,44 @@
     
     <main>
         <section class="border border-warning-subtle text-bg-dark p-3">
-            <div class="row container-fluid">
+            <div class="row container-fluid justify-content-center align-content-center">
 
-                <div class="border border-warning-subtle text-bg-dark
-                col-12 col-md-8 col-lg-6">
-                    <h1>h</h1>
+                <div class="d-flex border border-warning-subtle text-bg-dark
+                col-12 col-md-10 col-lg-8">
+                    <div class="p-3">
+                        <img src="{% static 'images/Productos/Herr_1.jpg' %}" alt="">
+                    </div>
+                    <div class="p-3">
+                        <h2>Martillo</h2>
+                        <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, nemo aliquam, facilis voluptatem ullam corrupti sint numquam iste inventore nobis!</h6>
+                        <br>
+                        <br>
+                        <br>
+                        <h3>Precio: $ 10.000</h3>
+                    </div>
                 </div>
     
-                <div class="border border-warning-subtle text-bg-dark
-                col-12 col-md-8 col-lg-6">
-                    <h1>h</h1>
+                <div class="d-flex border border-warning-subtle text-bg-dark
+                col-12 col-md-2 col-lg-4 justify-content-center container">
+                    <div class="row justify-content-center">
+                        <div class="col-12 d-flex h-75 p-3">
+                            <h3>Martillo... x1 $10.000</h3>
+                        </div>
+                        <div class="col-12 d-flex justify-content-center h-25 p-3">
+                            <button onclick = "window.location.href='{% url 'pagar' %}'">
+                                Pagar
+                            </button>
+                            
+                        </div>
+                    </div>
                 </div>
 
             </div>
         </section>
-        {% include 'base/footer.html' %}
     </main>
-    
 
+    {% include 'base/footer.html' %}
+    
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 </body>
 
