--- a/main/templates/base/footer.html
+++ b/main/templates/base/footer.html
@@ -50,7 +50,16 @@
         
         </div>
 
-      </div>
+        <div class="dropdown text-bg-dark">
+          <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Moneda
+          </button>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="{% url 'moneda' 'CLP' %}">CLP</a></li>
+            <li><a class="dropdown-item" href="{% url 'moneda' 'USD' %}">USD</a></li>
+          </ul>
+        </div>
 
+      </div>
     </div>
 </footer>
