--- a/main/templates/pages/index.html
+++ b/main/templates/pages/index.html
@@ -74,154 +74,66 @@
         <!-- Productos Herramientas -->
         <section class="border border-warning-subtle text-bg-dark p-3">
             <h2>Herramientas</h2>
-            <div class="container-fluid row gap-5 justify-content-center">
-                <div class="col-10 col-md-6 col-lg-2">
-                    <div class="card" style="width: auto;">
-                        <img src="{% static 'images/Productos/Herr_1.jpg' %}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                <div class="container-fluid row gap-5 justify-content-center">
+                    {% for p in herramientas %}
+                    <div class="col-10 col-md-6 col-lg-2">
+                        <div class="card" style="width: auto;">
+                            <img src="{{ p.imagen.url }}" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ p.nom_producto }}</h5>
+                            </div>
                         </div>
                     </div>
+                    {% endfor %}
                 </div>
-                <div class="col-10 col-md-6 col-lg-2">
-                    <div class="card" style="width: auto;">
-                        <img src="{% static 'images/Productos/Herr_2.jpg' %}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-10 col-md-6 col-lg-2">
-                    <div class="card" style="width: auto;">
-                        <img src="{% static 'images/Productos/Herr_3.jpg' %}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-10 col-md-6 col-lg-2">
-                    <div class="card" style="width: auto;">
-                        <img src="{% static 'images/Productos/Herr_4.jpg' %}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </section>
         <!-- Productos Muebles-->
         <section class="border border-warning-subtle text-bg-dark p-3">
             <h2>Muebles</h2>
-            <div class="container-fluid row gap-5 justify-content-center">
-                <div class="col-10 col-md-6 col-lg-2">
-                    <div class="card" style="width: auto;">
-                        <img src="{% static 'images/Productos/Mueb_1.jpg' %}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                <div class="container-fluid row gap-5 justify-content-center">
+                    {% for p in muebles %}
+                    <div class="col-10 col-md-6 col-lg-2">
+                        <div class="card" style="width: auto;">
+                            <img src="{{ p.imagen.url }}" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ p.nom_producto }}</h5>
+                            </div>
                         </div>
                     </div>
+                    {% endfor %}
                 </div>
-                <div class="col-10 col-md-6 col-lg-2">
-                    <div class="card" style="width: auto;">
-                        <img src="{% static 'images/Productos/Mueb_2.jpg' %}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-10 col-md-6 col-lg-2">
-                    <div class="card" style="width: auto;">
-                        <img src="{% static 'images/Productos/Mueb_3.jpg' %}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-10 col-md-6 col-lg-2">
-                    <div class="card" style="width: auto;">
-                        <img src="{% static 'images/Productos/Mueb_4.jpg' %}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </section>
         <!-- Productos Seguridad-->
         <section class="border border-warning-subtle text-bg-dark p-3">
             <h2>Seguridad</h2>
-            <div class="container-fluid row gap-5 justify-content-center">
-                <div class="col-10 col-md-6 col-lg-2">
-                    <div class="card" style="width: auto;">
-                        <img src="{% static 'images/Productos/Seg_1.jpg' %}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                <div class="container-fluid row gap-5 justify-content-center">
+                    {% for p in seguridad %}
+                    <div class="col-10 col-md-6 col-lg-2">
+                        <div class="card" style="width: auto;">
+                            <img src="{{ p.imagen.url }}" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ p.nom_producto }}</h5>
+                            </div>
                         </div>
                     </div>
+                    {% endfor %}
                 </div>
-                <div class="col-10 col-md-6 col-lg-2">
-                    <div class="card" style="width: auto;">
-                        <img src="{% static 'images/Productos/Seg_2.jpg' %}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-10 col-md-6 col-lg-2">
-                    <div class="card" style="width: auto;">
-                        <img src="{% static 'images/Productos/Seg_3.jpg' %}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-10 col-md-6 col-lg-2">
-                    <div class="card" style="width: auto;">
-                        <img src="{% static 'images/Productos/Seg_4.jpg' %}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </section>
         <!-- Productos Proteccion-->
         <section class="border border-warning-subtle text-bg-dark p-3">
             <h2>Proteccion</h2>
-            <div class="container-fluid row gap-5 justify-content-center">
-                <div class="col-10 col-md-6 col-lg-2">
-                    <div class="card" style="width: auto;">
-                        <img src="{% static 'images/Productos/Proct_1.jpg' %}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                <div class="container-fluid row gap-5 justify-content-center">
+                    {% for p in proteccion %}
+                    <div class="col-10 col-md-6 col-lg-2">
+                        <div class="card" style="width: auto;">
+                            <img src="{{ p.imagen.url }}" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ p.nom_producto }}</h5>
+                            </div>
                         </div>
                     </div>
+                    {% endfor %}
                 </div>
-                <div class="col-10 col-md-6 col-lg-2">
-                    <div class="card" style="width: auto;">
-                        <img src="{% static 'images/Productos/Proct_2.jpg' %}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-10 col-md-6 col-lg-2">
-                    <div class="card" style="width: auto;">
-                        <img src="{% static 'images/Productos/Proct_3.jpg' %}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-10 col-md-6 col-lg-2">
-                    <div class="card" style="width: auto;">
-                        <img src="{% static 'images/Productos/Proct_4.jpg' %}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </section>
         {% include 'base/footer.html' %}
     </main>
