--- a/main/templates/pages/muebles.html
+++ b/main/templates/pages/muebles.html
@@ -18,40 +18,26 @@
         <!-- Productos Muebles-->
         <section class="border border-warning-subtle text-bg-dark p-3">
             <h2>Muebles</h2>
-            <div class="container-fluid row gap-5 justify-content-center">
-                <div class="col-10 col-md-6 col-lg-2">
-                    <div class="card" style="width: auto;">
-                        <img src="{% static 'images/Productos/Mueb_1.jpg' %}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                <div class="container-fluid row gap-5 justify-content-center">
+                    {% for p in muebles %}
+                    <div class="col-10 col-md-6 col-lg-2">
+                        <div class="card" style="width: auto;">
+                            <img src="{{ p.imagen.url }}" class="card-img-top" alt="Imagen">
+                            <div class="card-body container-fluid">
+                                <div class="h-50">
+                                    <h5 class="card-title ">{{ p.nom_producto }}</h5>
+                                </div>
+                                <div class="h-25">
+                                    <h5>$ {{ p.valor }}</h5>
+                                </div>
+                                <div class="h-25">
+                                    <a href="{% url 'agregar_carrito' p.id_producto %}" class="btn btn-primary">Comprar</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
+                    {% endfor %}
                 </div>
-                <div class="col-10 col-md-6 col-lg-2">
-                    <div class="card" style="width: auto;">
-                        <img src="{% static 'images/Productos/Mueb_2.jpg' %}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-10 col-md-6 col-lg-2">
-                    <div class="card" style="width: auto;">
-                        <img src="{% static 'images/Productos/Mueb_3.jpg' %}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-10 col-md-6 col-lg-2">
-                    <div class="card" style="width: auto;">
-                        <img src="{% static 'images/Productos/Mueb_4.jpg' %}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </section>
     </main>
     
