--- a/main/templates/pages/index.html
+++ b/main/templates/pages/index.html
@@ -27,7 +27,7 @@
 
                     <div class="col-10 col-md-4 col-lg-2 shadow-sm p-3 mb-5 bg-body-tertiary rounded">
                         <div>
-                            <a class="titulo-noSub" href="">
+                            <a class="titulo-noSub" href="{% url 'muebles' %}">
                                 <div class="contenedor-item">
                                     <img src="{% static 'images/12.jpg' %}" alt="">
                                     <h3>Muebles</h3>
@@ -38,7 +38,7 @@
     
                     <div class="col-10 col-md-4 col-lg-2 shadow-sm p-3 mb-5 bg-body-tertiary rounded">
                         <div>
-                            <a class="titulo-noSub" href="">
+                            <a class="titulo-noSub" href="{% url 'proteccion' %}">
                                 <div class="contenedor-item">
                                     <img src="{% static 'images/13.jpg' %}" alt="">
                                     <h3>Proteccion Personal</h3>
@@ -49,7 +49,7 @@
     
                     <div class="col-10 col-md-4 col-lg-2 shadow-sm p-3 mb-5 bg-body-tertiary rounded">
                         <div>
-                            <a class="titulo-noSub" href="">
+                            <a class="titulo-noSub" href="{% url 'herramientas' %}">
                                 <div class="contenedor-item">
                                     <img src="{% static 'images/14.jpg' %}" alt="">
                                     <h3>Herramientas</h3>
@@ -60,7 +60,7 @@
     
                     <div class="col-10 col-md-4 col-lg-2 shadow-sm p-3 mb-5 bg-body-tertiary rounded">
                         <div>
-                            <a class="titulo-noSub" href="">
+                            <a class="titulo-noSub" href="{% url 'seguridad' %}">
                                 <div class="contenedor-item">
                                     <img src="{% static 'images/15.jpg' %}" alt="">
                                     <h3>Seguridad</h3>
